[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectora-core"
version = "0.1.0"
description = "Core algorithms and open standards for the Vectora AI Governance Control Plane"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Vectora", email = "hello@vectora.ai" }]
keywords = ["machine learning", "drift detection", "PSI", "SHAP", "AI governance", "MLOps", "audit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
shap = ["shap>=0.42"]
dev  = ["build>=1.2.0", "pytest>=8.0", "shap>=0.42"]

[project.urls]
Homepage   = "https://vectora.ai"
Repository = "https://github.com/vectora-dev/vectora-core"
Issues     = "https://github.com/vectora-dev/vectora-core/issues"

[tool.setuptools.packages.find]
include = ["vectora_core*"]
